# synthesizer-io

./: Architecture.md  Cargo.toml  README.md
audio/: Cargo.toml
audio/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: bench.rs  sigmoid.rs
core/examples/: basic.rs
core/src/: engine.rs  graph.rs  id_allocator.rs  lib.rs  module.rs  queue.rs  worker.rs
core/src/engine/: clip.rs  message.rs  mod.rs  note.rs  tempo.rs  track.rs  transport.rs
core/src/modules/: biquad.rs  mod.rs  note_pitch.rs  saw.rs  smooth_ctrl.rs  timesync.rs
daw/: Cargo.toml
daw/src/: main.rs
daw/src/blocks/tempo/: mod.rs
daw/src/engine/: clip.rs  data.rs  mod.rs  transport.rs
daw/src/state/: tempo.rs
daw/src/widgets/: mod.rs  signature_label.rs  switch.rs  tap_tempo.rs
gui_druid/: Cargo.toml
gui_druid/src/: app.rs  main.rs
gui_druid/src/blocks/: mod.rs
gui_druid/src/blocks/tempo/: mod.rs
gui_druid/src/engine/: clip.rs  track.rs  transport.rs
gui_druid/src/state/: mod.rs  tempo.rs
gui_druid/src/widgets/: switch.rs  tempo_label.rs
gui_egui/: Cargo.toml
gui_egui/src/: app.rs  main.rs
gui_iced/: Cargo.toml
gui_iced/src/: main.rs
gui_iced/src/state/: mod.rs  switch.rs  tempo.rs
gui_iced/src/widgets/: mod.rs  timeline.rs
scope/: Cargo.toml
scope/examples/: scope.rs
scope/src/: lib.rs
synthesizer-io-core/: Cargo.toml
synthesizer-io-core/src/modules/: saw.rs  sin.rs
synthesizer-io-win/: Cargo.toml
synthesizer-io-win/src/: grid.rs  main.rs  synth.rs
synthesizer-io-win/src/ui/: mod.rs  patcher.rs  piano.rs  scope.rs
ui/: Cargo.toml
ui/src/: grid.rs  main.rs  synth.rs
ui/src/ui/: mod.rs  piano.rs  scope.rs
