[package]
name = "core"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>", "Federico Dolce <hello@docler.me>"]
description = "Computational core for sound synthesis."
edition = "2021"

[dependencies]
lazy_static = "1.0"
time_calc = "0.13.0"
ringbuf = "0.2.7"

[dev-dependencies]
cpal = { version = "0.13.4", features = ["jack"] }
