[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
core = { path = "../synthesizer-io/core" }
cpal = { version = "0.13.4", features = ["jack"] }
