[package]
name = "gui_iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../../iced", features = ["pure", "tokio"] }
iced_native = { path = "../../iced/native" }
iced_pure = { path = "../../iced/pure" }
core = { path = "../core/" }
cpal = { path = "../../cpal", features = ["jack"] }
assert_no_alloc = "1.1.2"
