[package]
name = "scope"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>", "Federico Dolce <hello@docler.me>"]
license = "Apache-2.0"
description = "Oscilloscope style waveform visualization"
edition = "2021"

[dependencies]
fearless_simd = "0.1.1"

[dev-dependencies]
png = "0.12.0"
