[package]
name = "synthesizer-io-win"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "Apache 2.0"
description = "Windows UI synthesizer app"
edition = "2021"

[dependencies]
time = "0.1"
itertools = "0.7.8"
union-find = "0.3.2"
cpal = "0.13.4"
midir = "0.7.0"
# kurbo = "0.2.0"
# piet = "0.0.1"
# piet-common = "0.0.1"
druid = { git = "https://github.com/linebender/druid", features=["im"] }

[dependencies.synthesizer-io-core]
path = "../synthesizer-io-core"

[dependencies.synthesize-scope]
path = "../scope"
